k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: items-api
  labels:
    app.kubernetes.io/name: items-api
