k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: items-api
  namespace: items-api
  labels:
    app.kubernetes.io/name: items-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: items-api
  ports:
    - name: http
      port: 80
      targetPort: http
